src/objects/WGSettings__mdt.object
<CustomObject>
    <description>Custom Metadata Type created from old WG_settings Custom setting.</description>
    <fields>
        <fullName>AccountAfterInsertTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When true, AccountCustom controller calculates HUCs. Otherwise, not. Turn off for data loads.</description>
        <inlineHelpText>When true, AccountCustom controller calculates HUCs. Otherwise, not. Turn off for data loads.</inlineHelpText>
        <label>AccountAfterInsertTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactBeforeAfterInsertTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Turn off before data loads.</description>
        <inlineHelpText>Turn off before data loads.</inlineHelpText>
        <label>ContactBeforeAfterInsertTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DontUseLeads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DontUseLeads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FamilyAccountThreshhold__c</fullName>
        <defaultValue>70</defaultValue>
        <description>Above what level should an membership be considered a family membership andinclude all the active members in the account?  Defaults to 70.</description>
        <inlineHelpText>Above what level should an membership be considered a family membership andinclude all the active members in the account?  Defaults to 70.</inlineHelpText>
        <label>FamilyAccountThreshhold</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinalDonationCampaignStatus__c</fullName>
        <description>After a donation is recorded, the corresponding campaign member is updated. What should their status be set to? Default: Donated.</description>
        <inlineHelpText>After a donation is recorded, the corresponding campaign member is updated. What should their status be set to? Default: Donated.</inlineHelpText>
        <label>FinalDonationCampaignStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Donated</fullName>
                    <default>true</default>
                    <label>Donated</label>
                </value>
                <value>
                    <fullName>Responded Yes</fullName>
                </value>
                <value>
                    <fullName>Contributed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinalVolunteerCampaignStatus__c</fullName>
        <description>After a volunteer hours contribution is recorded, the corresponding campaign member is updated. What should their status be set to? Default: Completed.</description>
        <inlineHelpText>After a volunteer hours contribution is recorded, the corresponding campaign member is updated. What should their status be set to? Default: Completed.</inlineHelpText>
        <label>FinalVolunteerCampaignStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                    <default>true</default>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>Contributed</fullName>
                </value>
                <value>
                    <fullName>Took Action</fullName>
                </value>
                <value>
                    <fullName>Responded Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Google_API_Key__c</fullName>
        <description>For calling the Google API for Location geolocation.</description>
        <inlineHelpText>For calling the Google API for Location geolocation.</inlineHelpText>
        <label>Google API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HourlyVolunteerRate__c</fullName>
        <description>From independent Sector. Change this each year.</description>
        <inlineHelpText>From independent Sector. Change this each year.</inlineHelpText>
        <label>HourlyVolunteerRate</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadSource_QuestionCnP__c</fullName>
        <defaultValue>&apos;If this is your first donation or payment to our organization, please tell us how you first heard about us.&apos;</defaultValue>
        <description>The question used in CnP Custom Questions to find out the registrant&apos;s leadsource</description>
        <inlineHelpText>The question used in CnP Custom Questions to find out the registrant&apos;s leadsource</inlineHelpText>
        <label>LeadSource_QuestionCnP</label>
        <length>252</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManageContribsTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Turns off the ManageContribsTrigger to facilitate data loads.  Default is on.</description>
        <inlineHelpText>Turns off the ManageContribsTrigger to facilitate data loads.  Default is on.</inlineHelpText>
        <label>ManageContribsTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership_Grace_Period__c</fullName>
        <defaultValue>90</defaultValue>
        <description>How many days before or ever the expiration date should a new membership payment be considered a renewal. Default 90.</description>
        <inlineHelpText>How many days before or ever the expiration date should a new membership payment be considered a renewal. Default 90.</inlineHelpText>
        <label>Membership Grace Period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_signup_newsletter__c</fullName>
        <defaultValue>&apos;enewsletter&apos;</defaultValue>
        <description>Name of the newsletter (campaign or mailing list) for which people sign up from the website.  Default: &quot;enewsletter&quot;</description>
        <inlineHelpText>Name of the newsletter (campaign or mailing list) for which people sign up from the website.  Default: &quot;enewsletter&quot;</inlineHelpText>
        <label>Online_signup_newsletter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>WGSettings</label>
    <pluralLabel>WGSettings</pluralLabel>
</CustomObject>